# obs-studio

libobs/: obs-properties.h  obs-source.c
plugins/: CMakeLists.txt
plugins/channel-copier/: CMakeLists.txt  channel-copier.c  channel-copier.cpp
plugins/channel-copier/cmake/: legacy.cmake
plugins/obs-ffmpeg/: obs-ffmpeg-source.c
plugins/obs-filters/: compressor-filter.c
plugins/obs-webrtc/: whip-output.cpp
shared/properties-view/: properties-view.cpp  properties-view.hpp
